--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
         "@chakra-ui/react": "^1.7.3",
         "@emotion/react": "^11.7.1",
         "@emotion/styled": "^11.6.0",
+        "@types/jest": "^27.4.1",
+        "@types/node": "^17.0.27",
+        "@types/react": "^18.0.7",
+        "@types/react-dom": "^18.0.0",
         "framer-motion": "^5.5.5",
         "next": "^12.0.7",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-icons": "^4.3.1",
-        "three": "^0.135.0"
+        "three": "^0.135.0",
+        "typescript": "^4.6.3"
     },
     "devDependencies": {
         "eslint": "^8.5.0",
