--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,14 @@
         "resolveJsonModule": true,
         "isolatedModules": true
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+    "include": [
+        "next-env.d.ts",
+        "**/*.ts",
+        "**/*.tsx",
+        "components/emoji.js",
+        "components/Section.tsx",
+        "components/paragraph.js",
+        "next.config.js"
+    ],
     "exclude": ["node_modules"]
 }
