--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
         "react-dom": "^17.0.2",
         "react-icons": "^4.3.1",
         "three": "^0.135.0",
-        "typescript": "^4.6.3"
+        "typescript": "^4.7.0-dev.20220427"
     },
     "devDependencies": {
         "eslint": "^8.5.0",
