Domainname changed from koenjanssen.xyz to koenjanssen.dev

--- a/src/package.json
+++ b/src/package.json
@@ -10,7 +10,7 @@
         "lint": "next lint"
     },
     "keywords": [],
-    "author": "Koen Janssen<mail@koenjanssen.xyz>",
+    "author": "Koen Janssen<mail@koenjanssen.dev>",
     "license": "MIT",
     "dependencies": {
         "@chakra-ui/icons": "^1.1.1",
