--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "@types/react": "^18.0.7",
         "@types/react-dom": "^18.0.0",
         "framer-motion": "^5.5.5",
-        "next": "^12.0.7",
+        "next": "12.1.5",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-icons": "^4.3.1",
